# moldeosamples

./: .gitignore  Makefile.am  README.md  autogen_macports.sh  autogen_x64.sh  builddirs.sh  buildpkg.sh  configure.ac  control.amd64.11.10  exportdata.bat  moldeosamples.dirs  moldeosamples.install
basic/: Makefile.am  Makefile.am.files  create_makefile.am.files.bat
basic/00_Image/: 00_Image.mol  erase.cfg  image.cfg  moldeoapioscin.cfg  moldeoapioscout.cfg
basic/01_Icon/: 01_Icon.mol  icon.cfg  moldeoapioscin.cfg
basic/02_Plane/: erase.cfg  moldeoapioscin.cfg  plane.cfg
basic/05_ParticlesSimple/: 05_ParticlesSimple.mol  particlessimple.cfg
basic/06_Video/: 06_Video.mol  erase.cfg  icon.cfg  video.cfg
basic/08_Camera/: 08_Camera.mol  camera.cfg  videomanager.cfg
basic/09_OpenCV/: 09_OpenCV.mol  icon.cfg  opencv.cfg  oscout.cfg
basic/10_OpenCV/: 10_OpenCV.mol  image.cfg  opencv.cfg  sesion.mos
basic/11_OpenCVMotion/: 11_OpenCVMotion.mol  camera.cfg  icon.cfg  opencv.cfg  oscout.cfg  particles.cfg
basic/12_OpenCVRecognition/: 12_OpenCVRecognition.mol  camera.cfg  icon.cfg  moldeoapioscin.cfg  opencv.cfg
basic/13_OpenFace/: 13_OpenFace.mol  CONDENSACION.cfg  CUBO.cfg  MASK.cfg  PRECIPITACION.cfg  SOMBRERO.cfg  camera.cfg  cilindrosombrero.mtl  erase.cfg  iconcvblobs.cfg  iconcvthresh.cfg  mesh-68-puntos5.dae  openface.cfg  oscout.cfg  piratehat.dae  videomanager.cfg
basic/22_LiveDrawing2/: 22_LiveDrawing2.mol  livedrawing2.cfg  tablet.cfg
basic/23_Webview/: 23_Webview.mol  webview.cfg
basic/24_VideoWall/: 24_VideoWall.mol  image.cfg  moldeoapioscin.cfg  videowall.cfg
basic/Basico/: ECO.cfg  sesion.mos
basic/CicloDelAgua/: PRECIPITACION.cfg  SONIDO.cfg
basic/Elemental/: ELEMENTAL.mol  FIGURAS.cfg  moldeolog.txt
kinect/: Makefile.am
kinect/00_KinectBasic/: 00_KinectBasic.mol  erase.cfg  icon_head.cfg  icon_left_hand.cfg  icon_right_hand.cfg  icon_shoulders.cfg  kamehameha.cfg  kinect.cfg  user.cfg  userskel.cfg
kinect/01_KinectSkeleton/: 01_KinectSkeleton.mol  icon_head.cfg  icon_left_hand.cfg  icon_right_hand.cfg  kinect.cfg  mg.cfg  user.cfg
kinect/02_KinectParticles/: 02_KinectParticles.mol  kinect.cfg  particles_left_hand.cfg  particles_right_hand.cfg
kinect/03_KinectParticlesSound/: 03_KinectParticlesSound.mol  Sound3D_Drums.mol  kinect.cfg  particles_left_hand.cfg  sound3d_A.cfg  sound3d_J.cfg  sound3d_K.cfg  sound3d_L.cfg  user.cfg
kinect/04_KinectParticlesSoundFractal/: 04_KinectParticlesSoundFractal.mol  kinect.cfg  mg.cfg  midi.cfg  particles_left_hand.cfg  particles_right_hand.cfg  pfractal.cfg  sound3d_D.cfg  sound3d_J.cfg  sound3d_K.cfg  sound3d_L.cfg  sound3d_S.cfg  user.cfg
midi/: Makefile.am
midi/00_MidiTest/: 00_MidiTest.mol  image.cfg  midi.cfg  sound3d.cfg
ola/: Makefile.am
ola/00_OlaTest/: 00_OlaTest.mol  image.cfg  moldeoapioscin.cfg  ola.cfg
samples/: Makefile.am
samples/Basico/: FONDO.cfg  ICONO4.cfg  TUNEL2.cfg  moldeoapioscin.cfg
samples/Camaleon/: sesion.mos
samples/Cameras/: cameras.mol  icam.cfg  videomanager.cfg
samples/CamerasCircular/: cameras_circular.mol  image_phase_0.cfg  image_phase_1.cfg  image_realtime.cfg  plano0.cfg  plano01.cfg  plano011.cfg  plano0111.cfg  plano01111.cfg  plano011111.cfg  plano0111111.cfg  plano1.cfg  videomanager_circularbuffer.cfg
samples/ChannelControl/: channel0.cfg  channelcontrol.mol  erase.cfg  icon.cfg  image.cfg  keyboard.cfg  ligia.cfg  masterchannel.cfg  mixer.cfg  moldeoerrors.txt  moldeolog.txt  mouse.cfg  panel.cfg  presetpanel.cfg
samples/CicloDelAgua/: CONDENSACION.cfg
samples/Dibujo_con_luz/: camara.cfg  camara_espejada.cfg  dibujo_con_luz.mol  icam.cfg  mascara.cfg  mezcla.cfg  movie.cfg  musica.cfg  videomanager.cfg
samples/Elemental/: ECO.cfg
samples/LiveDrawing/: dibujo.cfg  erase.cfg  fondo.cfg
samples/ParticlesBounce/: ico.cfg  ico1.cfg  mirrorg.cfg  particles.cfg  particles.lua  particles1.cfg  videomanager.cfg
samples/ParticlesInteractive/: interactiveparticles.cfg  interactiveparticles.lua  videomanager.cfg
samples/Rain_Particles/: Rain_Particles.mol  blur.cfg  lluvia.cfg  lluvia1.cfg  lluvia11.cfg  moldeolog.txt  pfx.cfg  sonido.cfg
samples/ShaderExample/: debug.cfg  icon.cfg  icon1.cfg  icon2.cfg  icon3.cfg  mirrorg.cfg  particulas.cfg  shader_example.mol
samples/SimpleProject/: icon.cfg  mirrorg.cfg  simple_project.mol  text.cfg
samples/Snow_Particles/: Snow_Particles.mol  blur.cfg  erase.cfg  moldeolog.txt  pfx.cfg  postfx.cfg  snow.cfg  snow1.cfg  snow11.cfg  sonido.cfg
samples/Tunel/: Tunel.mol  erase.cfg  mirrorg.cfg  moldeoapioscin.cfg  tunel2.cfg  tunel21.cfg  tunel22.cfg
samples/VideoBuffers/: icon.cfg  video_buffers.mol  videomanager_videobuffer.cfg
scripting/: Makefile.am
scripting/00_ImageScript/: image.cfg  image.lua  moldeoapioscout.cfg  sesion.mos
scripting/01_ConsoleScript/: 01_ConsoleScript.mol  consola.lua  imageA.cfg  imageB.cfg  moldeo.lua
scripting/02_InternetScript/: consola.lua  image.lua  imageA.cfg  imageB.cfg
sound/: Makefile.am
sound/MidiImageSound/: CAPA2.cfg  erase.cfg  sound3d4.cfg
sound/Sound3D_Doppler/: Sound3D_Doppler.mol  sound3d_W.cfg
sound/Sound3D_Drums/: sound3d_W.cfg
sound/SoundFaust/: SoundFaust.mol  erase.cfg  soundfaust_W.cfg
taller/: Makefile.am
taller/Basico/: ICONO1.cfg  ICONO2.cfg  ICONO3.cfg  PARTICULAS.cfg  TUNEL1.cfg  basico.mol
taller/ChatInteractivo/: CAMARA.cfg  MARCA.cfg  MASCARA.cfg  PARTICULAS.cfg  TEXTO.cfg  TEXTO3D.cfg  VIDEO.cfg  erase.cfg  opencv.cfg
taller/CicloDelAgua/: AGUA.cfg  CICLO.cfg  CONDENSACION.cfg  CicloDelAgua.mol  EVAPORACION.cfg  PAISAJE.cfg  PRECIPITACION.cfg  SONIDO.cfg  erase.cfg  moldeoerrors.txt  moldeolog.txt
taller/Collage_Animado/: CAPA1.cfg  CAPA2.cfg  CAPA3.cfg  CAPA4.cfg  CAPA5.cfg  ECO.cfg  FONDO.cfg  SONIDO.cfg  collage_animado.mol  moldeolog.txt
taller/Elemental/: MASCARAS.cfg
taller/RESET_mapping_01/: RESET_mapping_01.mol  moldeoapioscout.cfg  particlessimple.cfg  plane.cfg  plane_mask.cfg  video.cfg
taller/VisualArt/: CAMARA.cfg  MIRRORG.cfg  TUNEL.cfg  VIDEO.cfg  VisualArt.mol  parti_stars.cfg  (+3 more)
(+122 files in other folders)
