
datadir = ${prefix}/share/moldeo
fontsdir = ${datadir}/fonts
cursorsdir = ${datadir}/cursors
iconsdir = ${datadir}/icons
desktopdir = ${prefix}/share/applications
pixmapsdir = ${prefix}/share/pixmaps
testdir = ${datadir}/test
testsimpledir = ${testdir}
basicdir = ${datadir}/basic
00imagedir = ${basicdir}/00_Image
01icondir = ${basicdir}/01_Icon
02planedir = ${basicdir}/02_Plane
08cameradir = ${basicdir}/08_Camera

dist_00image_DATA = 00_Image/*.*
dist_01icon_DATA = 01_Icon/*.*
dist_02plane_DATA = 02_Plane/*.*
dist_08camera_DATA = 08_Camera/*.*

