
datadir = ${prefix}/share/moldeo
fontsdir = ${datadir}/fonts
cursorsdir = ${datadir}/cursors
iconsdir = ${datadir}/icons
desktopdir = ${prefix}/share/applications
pixmapsdir = ${prefix}/share/pixmaps
testdir = ${datadir}/test
testsimpledir = ${testdir}

basicdir = ${datadir}/basic

00imagedir = ${basicdir}/00_Image

01icondir = ${basicdir}/01_Icon

02planedir = ${basicdir}/02_Plane

08cameradir = ${basicdir}/08_Camera

09opencvdir = ${basicdir}/09_OpenCV
09opencvhaardir = ${basicdir}/09_OpenCV/haarcascades

10opencvdir = ${basicdir}/10_OpenCV
10opencvhogdir = ${10opencvdir}/hogcascades
10opencvhaardir = ${10opencvdir}/haarcascades

11opencvmotiondir = ${basicdir}/11_OpenCVMotion
11opencvmotionhogdir = ${11opencvmotiondir}/hogcascades
11opencvmotionhaardir = ${11opencvmotiondir}/haarcascades

dist_00image_DATA = 00_Image/*.*

dist_01icon_DATA = 01_Icon/*.*

dist_02plane_DATA = 02_Plane/*.*

dist_08camera_DATA = 08_Camera/*.*

dist_09opencv_DATA = 09_OpenCV/*.*
dist_09opencvhaar_DATA = 09_OpenCV/haarcascades/*.*

dist_10opencv_DATA = 10_OpenCV/*.*
dist_10opencvhaar_DATA = 10_OpenCV/haarcascades/*.*
dist_10opencvhog_DATA = 10_OpenCV/hogcascades/*.*

dist_11opencvmotion_DATA = 11_OpenCVMotion/*.*
dist_11opencvmotionhaar_DATA = 11_OpenCVMotion/haarcascades/*.*
dist_11opencvmotionhog_DATA = 11_OpenCVMotion/hogcascades/*.*

