datadir = ${prefix}/share/moldeo
fontsdir = ${datadir}/fonts
cursorsdir = ${datadir}/cursors
iconsdir = ${datadir}/icons
desktopdir = ${prefix}/share/applications
pixmapsdir = ${prefix}/share/pixmaps
testdir = ${datadir}/test
testsimpledir = ${testdir}

basicdir = ${datadir}/basic

basic22LiveDrawing2dir = ${basicdir}/22_LiveDrawing2
dist_basic22LiveDrawing2_DATA = 22_LiveDrawing2/*.*

basic22LiveDrawing2shadersdir = ${basicdir}/22_LiveDrawing2/shaders
dist_basic22LiveDrawing2shaders_DATA = 22_LiveDrawing2/shaders/*.*

basic22LiveDrawing2shaderspainterdir = ${basicdir}/22_LiveDrawing2/shaders/painter
dist_basic22LiveDrawing2shaderspainter_DATA = 22_LiveDrawing2/shaders/painter/*.*

basic22LiveDrawing2shaderskltdir = ${basicdir}/22_LiveDrawing2/shaders/klt
dist_basic22LiveDrawing2shadersklt_DATA = 22_LiveDrawing2/shaders/klt/*.*

basic22LiveDrawing2shaderskltatidir = ${basicdir}/22_LiveDrawing2/shaders/klt/ati
dist_basic22LiveDrawing2shaderskltati_DATA = 22_LiveDrawing2/shaders/klt/ati/*.*



basic01Icondir = ${basicdir}/01_Icon
dist_basic01Icon_DATA = 01_Icon/*.*

basic01Iconpreviewshotsdir = ${basicdir}/01_Icon/previewshots
dist_basic01Iconpreviewshots_DATA = 01_Icon/previewshots/*.*

basic05ParticlesSimpledir = ${basicdir}/05_ParticlesSimple
dist_basic05ParticlesSimple_DATA = 05_ParticlesSimple/*.*

basic05ParticlesSimplepreviewshotsdir = ${basicdir}/05_ParticlesSimple/previewshots
dist_basic05ParticlesSimplepreviewshots_DATA = 05_ParticlesSimple/previewshots/*.*

basic24VideoWalldir = ${basicdir}/24_VideoWall
dist_basic24VideoWall_DATA = 24_VideoWall/*.*

basic24VideoWallpreviewshotsdir = ${basicdir}/24_VideoWall/previewshots
dist_basic24VideoWallpreviewshots_DATA = 24_VideoWall/previewshots/*.*

basic11OpenCVMotiondir = ${basicdir}/11_OpenCVMotion
dist_basic11OpenCVMotion_DATA = 11_OpenCVMotion/*.*

basic11OpenCVMotionconectadosdir = ${basicdir}/11_OpenCVMotion/conectados
dist_basic11OpenCVMotionconectados_DATA = 11_OpenCVMotion/conectados/*.*

basic11OpenCVMotionhogcascadesdir = ${basicdir}/11_OpenCVMotion/hogcascades
dist_basic11OpenCVMotionhogcascades_DATA = 11_OpenCVMotion/hogcascades/*.*

basic11OpenCVMotionscriptsdir = ${basicdir}/11_OpenCVMotion/scripts
dist_basic11OpenCVMotionscripts_DATA = 11_OpenCVMotion/scripts/*.*

basic11OpenCVMotionhaarcascadesdir = ${basicdir}/11_OpenCVMotion/haarcascades
dist_basic11OpenCVMotionhaarcascades_DATA = 11_OpenCVMotion/haarcascades/*.*

basic00Imagedir = ${basicdir}/00_Image
dist_basic00Image_DATA = 00_Image/*.*

basic00Imagepreviewshotsdir = ${basicdir}/00_Image/previewshots
dist_basic00Imagepreviewshots_DATA = 00_Image/previewshots/*.*

basic02Planedir = ${basicdir}/02_Plane
dist_basic02Plane_DATA = 02_Plane/*.*

basic02Planepreviewshotsdir = ${basicdir}/02_Plane/previewshots
dist_basic02Planepreviewshots_DATA = 02_Plane/previewshots/*.*

basic08Cameradir = ${basicdir}/08_Camera
dist_basic08Camera_DATA = 08_Camera/*.*

basic08Camerapreviewshotsdir = ${basicdir}/08_Camera/previewshots
dist_basic08Camerapreviewshots_DATA = 08_Camera/previewshots/*.*

basic10OpenCVdir = ${basicdir}/10_OpenCV
dist_basic10OpenCV_DATA = 10_OpenCV/*.*

basic10OpenCVhogcascadesdir = ${basicdir}/10_OpenCV/hogcascades
dist_basic10OpenCVhogcascades_DATA = 10_OpenCV/hogcascades/*.*

basic10OpenCVhaarcascadesdir = ${basicdir}/10_OpenCV/haarcascades
dist_basic10OpenCVhaarcascades_DATA = 10_OpenCV/haarcascades/*.*

basic13OpenFacedir = ${basicdir}/13_OpenFace
dist_basic13OpenFace_DATA = 13_OpenFace/*.*

basic13OpenFacemodeldir = ${basicdir}/13_OpenFace/model
dist_basic13OpenFacemodel_DATA = 13_OpenFace/model/*.*

basic13OpenFacemodelmodeleyedir = ${basicdir}/13_OpenFace/model/model_eye
dist_basic13OpenFacemodelmodeleye_DATA = 13_OpenFace/model/model_eye/*.*


basic13OpenFacemodelmodeleyepdmsdir = ${basicdir}/13_OpenFace/model/model_eye/pdms
dist_basic13OpenFacemodelmodeleyepdms_DATA = 13_OpenFace/model/model_eye/pdms/*.*


basic13OpenFacemodelpatchexpertsdir = ${basicdir}/13_OpenFace/model/patch_experts
dist_basic13OpenFacemodelpatchexperts_DATA = 13_OpenFace/model/patch_experts/*.*

basic13OpenFacemodelmodelinnerdir = ${basicdir}/13_OpenFace/model/model_inner
dist_basic13OpenFacemodelmodelinner_DATA = 13_OpenFace/model/model_inner/*.*



basic13OpenFacemodelpdmsdir = ${basicdir}/13_OpenFace/model/pdms
dist_basic13OpenFacemodelpdms_DATA = 13_OpenFace/model/pdms/*.*

basic13OpenFaceclassifiersdir = ${basicdir}/13_OpenFace/classifiers
dist_basic13OpenFaceclassifiers_DATA = 13_OpenFace/classifiers/*.*

basic13OpenFaceAUpredictorsdir = ${basicdir}/13_OpenFace/AU_predictors
dist_basic13OpenFaceAUpredictors_DATA = 13_OpenFace/AU_predictors/*.*



basic13OpenFaceimagesdir = ${basicdir}/13_OpenFace/images
dist_basic13OpenFaceimages_DATA = 13_OpenFace/images/*.*

basic09OpenCVdir = ${basicdir}/09_OpenCV
dist_basic09OpenCV_DATA = 09_OpenCV/*.*

basic09OpenCVhaarcascadesdir = ${basicdir}/09_OpenCV/haarcascades
dist_basic09OpenCVhaarcascades_DATA = 09_OpenCV/haarcascades/*.*

basic23Webviewdir = ${basicdir}/23_Webview
dist_basic23Webview_DATA = 23_Webview/*.*

basic23Webviewpreviewshotsdir = ${basicdir}/23_Webview/previewshots
dist_basic23Webviewpreviewshots_DATA = 23_Webview/previewshots/*.*

basic12OpenCVRecognitiondir = ${basicdir}/12_OpenCVRecognition
dist_basic12OpenCVRecognition_DATA = 12_OpenCVRecognition/*.*

basic12OpenCVRecognitiontraindir = ${basicdir}/12_OpenCVRecognition/train
dist_basic12OpenCVRecognitiontrain_DATA = 12_OpenCVRecognition/train/*.*

basic12OpenCVRecognitionhaarcascadesdir = ${basicdir}/12_OpenCVRecognition/haarcascades
dist_basic12OpenCVRecognitionhaarcascades_DATA = 12_OpenCVRecognition/haarcascades/*.*

basic06Videodir = ${basicdir}/06_Video
dist_basic06Video_DATA = 06_Video/*.*

basic06Videopreviewshotsdir = ${basicdir}/06_Video/previewshots
dist_basic06Videopreviewshots_DATA = 06_Video/previewshots/*.*

