datadir = ${prefix}/share/moldeo
fontsdir = ${datadir}/fonts
cursorsdir = ${datadir}/cursors
iconsdir = ${datadir}/icons
desktopdir = ${prefix}/share/applications
pixmapsdir = ${prefix}/share/pixmaps
testdir = ${datadir}/test
testsimpledir = ${testdir}

basicdir = ${datadir}/scripting

kinect00dir = ${basicdir}/00_KinectBasic
dist_kinect00_DATA = 00_KinectBasic/*.*

kinect01dir = ${basicdir}/01_KinectSkeleton
dist_kinect01_DATA = 01_KinectSkeleton/*.*

kinect02dir = ${basicdir}/02_KinectParticles
dist_kinect02_DATA = 02_KinectParticles/*.*

kinect03dir = ${basicdir}/03_KinectParticlesSound
dist_kinect03_DATA = 03_KinectParticlesSound/*.*

kinect04dir = ${basicdir}/03_KinectParticlesSoundFractal
dist_kinect04_DATA = 04_KinectParticlesSoundFractal/*.*
