datadir = ${prefix}/share/moldeo
fontsdir = ${datadir}/fonts
cursorsdir = ${datadir}/cursors
iconsdir = ${datadir}/icons
desktopdir = ${prefix}/share/applications
pixmapsdir = ${prefix}/share/pixmaps
testdir = ${datadir}/test
testsimpledir = ${testdir}

basicdir = ${datadir}/kinect

kinect03KinectParticlesSounddir = ${basicdir}/03_KinectParticlesSound
dist_kinect03KinectParticlesSound_DATA = 03_KinectParticlesSound/*.*

kinect03KinectParticlesSoundSonidosdir = ${basicdir}/03_KinectParticlesSound/Sonidos
dist_kinect03KinectParticlesSoundSonidos_DATA = 03_KinectParticlesSound/Sonidos/*.*


kinect00KinectBasicdir = ${basicdir}/00_KinectBasic
dist_kinect00KinectBasic_DATA = 00_KinectBasic/*.*

kinect01KinectSkeletondir = ${basicdir}/01_KinectSkeleton
dist_kinect01KinectSkeleton_DATA = 01_KinectSkeleton/*.*

kinect02KinectParticlesdir = ${basicdir}/02_KinectParticles
dist_kinect02KinectParticles_DATA = 02_KinectParticles/*.*

kinect04KinectParticlesSoundFractaldir = ${basicdir}/04_KinectParticlesSoundFractal
dist_kinect04KinectParticlesSoundFractal_DATA = 04_KinectParticlesSoundFractal/*.*











