datadir = ${prefix}/share/moldeo
fontsdir = ${datadir}/fonts
cursorsdir = ${datadir}/cursors
iconsdir = ${datadir}/icons
desktopdir = ${prefix}/share/applications
pixmapsdir = ${prefix}/share/pixmaps
testdir = ${datadir}/test
testsimpledir = ${testdir}

basicdir = ${datadir}/ola

ola00dir = ${basicdir}/00_OlaTest
dist_ola00_DATA = 00_OlaTest/*.*
