
datadir = ${prefix}/share/moldeo
fontsdir = ${datadir}/fonts
cursorsdir = ${datadir}/cursors
iconsdir = ${datadir}/icons
desktopdir = ${prefix}/share/applications
pixmapsdir = ${prefix}/share/pixmaps
testdir = ${datadir}/test
testsimpledir = ${testdir}
samplesdir = ${datadir}/samples
s0dir = ${samplesdir}/Dibujo_con_luz
s1dir = ${samplesdir}/Rain_Particles
s2dir = ${samplesdir}/Snow_Particles
s3dir = ${samplesdir}/Snow_Particles
s4dir = ${samplesdir}/SimpleProject
s5dir = ${samplesdir}/ShaderExample
s6dir = ${samplesdir}/Cameras
s7dir = ${samplesdir}/CamerasCircular
s8dir = ${samplesdir}/ChannelControl
s9dir = ${samplesdir}/Tunel
s10dir = ${samplesdir}/ParticlesBounce
s11dir = ${samplesdir}/ParticlesInteractive
s12dir = ${samplesdir}/Camaleon

dist_s0_DATA = Dibujo_con_luz/*.*
dist_s1_DATA = Rain_Particles/*.*
dist_s2_DATA = Rain_Particles/*.*
dist_s3_DATA = Snow_Particles/*.*
dist_s4_DATA = SimpleProject/*.*
dist_s5_DATA = ShaderExample/*.*
dist_s6_DATA = Cameras/*.*
dist_s7_DATA = CamerasCircular/*.*
dist_s8_DATA = ChannelControl/*.*
dist_s9_DATA = Tunel/*.*
dist_s10_DATA = ParticlesBounce/*.*
dist_s11_DATA = ParticlesInteractive/*.*
dist_s12_DATA = Camaleon/*.*
