datadir = ${prefix}/share/moldeo
fontsdir = ${datadir}/fonts
cursorsdir = ${datadir}/cursors
iconsdir = ${datadir}/icons
desktopdir = ${prefix}/share/applications
pixmapsdir = ${prefix}/share/pixmaps
testdir = ${datadir}/test
testsimpledir = ${testdir}

basicdir = ${datadir}/samples

samplesDibujoconluzdir = ${basicdir}/Dibujo_con_luz
dist_samplesDibujoconluz_DATA = Dibujo_con_luz/*.*

samplesDibujoconluzpreviewshotsdir = ${basicdir}/Dibujo_con_luz/previewshots
dist_samplesDibujoconluzpreviewshots_DATA = Dibujo_con_luz/previewshots/*.*

samplesCamerasdir = ${basicdir}/Cameras
dist_samplesCameras_DATA = Cameras/*.*

samplesCameraspreviewshotsdir = ${basicdir}/Cameras/previewshots
dist_samplesCameraspreviewshots_DATA = Cameras/previewshots/*.*

samplesChannelControldir = ${basicdir}/ChannelControl
dist_samplesChannelControl_DATA = ChannelControl/*.*

samplesChannelControlpreviewshotsdir = ${basicdir}/ChannelControl/previewshots
dist_samplesChannelControlpreviewshots_DATA = ChannelControl/previewshots/*.*

samplesCamerasCirculardir = ${basicdir}/CamerasCircular
dist_samplesCamerasCircular_DATA = CamerasCircular/*.*

samplesCamerasCircularpreviewshotsdir = ${basicdir}/CamerasCircular/previewshots
dist_samplesCamerasCircularpreviewshots_DATA = CamerasCircular/previewshots/*.*

samplesShaderExampledir = ${basicdir}/ShaderExample
dist_samplesShaderExample_DATA = ShaderExample/*.*

samplesShaderExamplepreviewshotsdir = ${basicdir}/ShaderExample/previewshots
dist_samplesShaderExamplepreviewshots_DATA = ShaderExample/previewshots/*.*

samplesShaderExampleshadersdir = ${basicdir}/ShaderExample/shaders
dist_samplesShaderExampleshaders_DATA = ShaderExample/shaders/*.*

samplesParticlesBouncedir = ${basicdir}/ParticlesBounce
dist_samplesParticlesBounce_DATA = ParticlesBounce/*.*

samplesParticlesBouncepreviewshotsdir = ${basicdir}/ParticlesBounce/previewshots
dist_samplesParticlesBouncepreviewshots_DATA = ParticlesBounce/previewshots/*.*

samplesParticlesInteractivedir = ${basicdir}/ParticlesInteractive
dist_samplesParticlesInteractive_DATA = ParticlesInteractive/*.*


samplesSnowParticlesdir = ${basicdir}/Snow_Particles
dist_samplesSnowParticles_DATA = Snow_Particles/*.*

samplesSnowParticlespreviewshotsdir = ${basicdir}/Snow_Particles/previewshots
dist_samplesSnowParticlespreviewshots_DATA = Snow_Particles/previewshots/*.*

samplesRainParticlesdir = ${basicdir}/Rain_Particles
dist_samplesRainParticles_DATA = Rain_Particles/*.*

samplesRainParticlespreviewshotsdir = ${basicdir}/Rain_Particles/previewshots
dist_samplesRainParticlespreviewshots_DATA = Rain_Particles/previewshots/*.*

samplesSimpleProjectdir = ${basicdir}/SimpleProject
dist_samplesSimpleProject_DATA = SimpleProject/*.*

samplesSimpleProjectpreviewshotsdir = ${basicdir}/SimpleProject/previewshots
dist_samplesSimpleProjectpreviewshots_DATA = SimpleProject/previewshots/*.*

samplesCamaleondir = ${basicdir}/Camaleon
dist_samplesCamaleon_DATA = Camaleon/*.*

samplesCamaleonpreviewshotsdir = ${basicdir}/Camaleon/previewshots
dist_samplesCamaleonpreviewshots_DATA = Camaleon/previewshots/*.*

samplesTuneldir = ${basicdir}/Tunel
dist_samplesTunel_DATA = Tunel/*.*

samplesTunelpreviewshotsdir = ${basicdir}/Tunel/previewshots
dist_samplesTunelpreviewshots_DATA = Tunel/previewshots/*.*

