datadir = ${prefix}/share/moldeo
fontsdir = ${datadir}/fonts
cursorsdir = ${datadir}/cursors
iconsdir = ${datadir}/icons
desktopdir = ${prefix}/share/applications
pixmapsdir = ${prefix}/share/pixmaps
testdir = ${datadir}/test
testsimpledir = ${testdir}

basicdir = ${datadir}/scripting

basic00ImageScriptdir = ${basicdir}/00_ImageScript
dist_basic00ImageScript_DATA = 00_ImageScript/*.*

basic01ConsoleScriptdir = ${basicdir}/01_ConsoleScript
dist_basic01ConsoleScript_DATA = 01_ConsoleScript/*.*

basic02InternetScriptdir = ${basicdir}/02_InternetScript
dist_basic02InternetScript_DATA = 02_InternetScript/*.*
