datadir = ${prefix}/share/moldeo
fontsdir = ${datadir}/fonts
cursorsdir = ${datadir}/cursors
iconsdir = ${datadir}/icons
desktopdir = ${prefix}/share/applications
pixmapsdir = ${prefix}/share/pixmaps
testdir = ${datadir}/test
testsimpledir = ${testdir}

basicdir = ${datadir}/scripting

scripting00ImageScriptdir = ${basicdir}/00_ImageScript
dist_scripting00ImageScript_DATA = 00_ImageScript/*.*

scripting01ConsoleScriptdir = ${basicdir}/01_ConsoleScript
dist_scripting01ConsoleScript_DATA = 01_ConsoleScript/*.*

scripting02InternetScriptdir = ${basicdir}/02_InternetScript
dist_scripting02InternetScript_DATA = 02_InternetScript/*.*

