datadir = ${prefix}/share/moldeo
fontsdir = ${datadir}/fonts
cursorsdir = ${datadir}/cursors
iconsdir = ${datadir}/icons
desktopdir = ${prefix}/share/applications
pixmapsdir = ${prefix}/share/pixmaps
testdir = ${datadir}/test
testsimpledir = ${testdir}

basicdir = ${datadir}/scripting

sound00dir = ${basicdir}/MidiImageSound
dist_sound00_DATA = MidiImageSound/*.*

sound01dir = ${basicdir}/Sound3D_Doppler
dist_sound01_DATA = Sound3D_Doppler/*.*

sound02dir = ${basicdir}/Sound3D_Drums
dist_sound02_DATA = Sound3D_Drums/*.*

sound03dir = ${basicdir}/SoundFaust
dist_sound03_DATA = SoundFaust/*.*
