datadir = ${prefix}/share/moldeo
fontsdir = ${datadir}/fonts
cursorsdir = ${datadir}/cursors
iconsdir = ${datadir}/icons
desktopdir = ${prefix}/share/applications
pixmapsdir = ${prefix}/share/pixmaps
testdir = ${datadir}/test
testsimpledir = ${testdir}

basicdir = ${datadir}/sound

soundMidiImageSounddir = ${basicdir}/MidiImageSound
dist_soundMidiImageSound_DATA = MidiImageSound/*.*

soundSound3DDrumsdir = ${basicdir}/Sound3D_Drums
dist_soundSound3DDrums_DATA = Sound3D_Drums/*.*

soundSoundFaustdir = ${basicdir}/SoundFaust
dist_soundSoundFaust_DATA = SoundFaust/*.*

soundSound3DDopplerdir = ${basicdir}/Sound3D_Doppler
dist_soundSound3DDoppler_DATA = Sound3D_Doppler/*.*

