datadir = ${prefix}/share/moldeo
fontsdir = ${datadir}/fonts
cursorsdir = ${datadir}/cursors
iconsdir = ${datadir}/icons
desktopdir = ${prefix}/share/applications
pixmapsdir = ${prefix}/share/pixmaps
testdir = ${datadir}/test
testsimpledir = ${testdir}

basicdir = ${datadir}/taller

tallerCollageAnimadodir = ${basicdir}/Collage_Animado
dist_tallerCollageAnimado_DATA = Collage_Animado/*.*

tallerCollageAnimadopreviewshotsdir = ${basicdir}/Collage_Animado/previewshots
dist_tallerCollageAnimadopreviewshots_DATA = Collage_Animado/previewshots/*.*

tallerVisualArtdir = ${basicdir}/VisualArt
dist_tallerVisualArt_DATA = VisualArt/*.*

tallerVisualArtpreviewshotsdir = ${basicdir}/VisualArt/previewshots
dist_tallerVisualArtpreviewshots_DATA = VisualArt/previewshots/*.*

tallerElementaldir = ${basicdir}/Elemental
dist_tallerElemental_DATA = Elemental/*.*

tallerElementalpreviewshotsdir = ${basicdir}/Elemental/previewshots
dist_tallerElementalpreviewshots_DATA = Elemental/previewshots/*.*

tallerChatInteractivodir = ${basicdir}/ChatInteractivo
dist_tallerChatInteractivo_DATA = ChatInteractivo/*.*

tallerChatInteractivopreviewshotsdir = ${basicdir}/ChatInteractivo/previewshots
dist_tallerChatInteractivopreviewshots_DATA = ChatInteractivo/previewshots/*.*

tallerChatInteractivohaarcascadesdir = ${basicdir}/ChatInteractivo/haarcascades
dist_tallerChatInteractivohaarcascades_DATA = ChatInteractivo/haarcascades/*.*

tallerCicloDelAguadir = ${basicdir}/CicloDelAgua
dist_tallerCicloDelAgua_DATA = CicloDelAgua/*.*

tallerCicloDelAguapreviewshotsdir = ${basicdir}/CicloDelAgua/previewshots
dist_tallerCicloDelAguapreviewshots_DATA = CicloDelAgua/previewshots/*.*

tallerBasicodir = ${basicdir}/Basico
dist_tallerBasico_DATA = Basico/*.*

tallerBasicoRECURSOSdir = ${basicdir}/Basico/RECURSOS
dist_tallerBasicoRECURSOS_DATA = Basico/RECURSOS/*.*

tallerBasicopreviewshotsdir = ${basicdir}/Basico/previewshots
dist_tallerBasicopreviewshots_DATA = Basico/previewshots/*.*

